--- a/v2/patrodent/templates/analisis-anatomopatologico-muestras-orales.html
+++ b/v2/patrodent/templates/analisis-anatomopatologico-muestras-orales.html
@@ -6,7 +6,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Análisis anatomopatológico de muestras orales" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'analisis-anatomopatologico-muestras-orales' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'analisis-anatomopatologico-muestras-orales' %}">
 <meta property="og:description" content="En Patrodent, tenemos como rutina realizar en cada revisión un estudio minucioso de todas las mucosas orales para anticiparnos a cualquier adversidad. ">
 <meta property="og:type" content="image/jpeg" />
 <meta property="og:image" content="http{% if request.is_secure %}{% endif %}://{% static 'images/patrocinio_y_angela.jpg' %}" />
