--- a/v2/patrodent/templates/atm.html
+++ b/v2/patrodent/templates/atm.html
@@ -8,7 +8,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Problemas de articulación temporomandibular (ATM)" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'atm' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'atm' %}">
 <meta property="og:description" content="La articulación temporomandibular es el medio de unión de la mandíbula con el craneo">
 {% endblock %}
 
