--- a/v2/patrodent/templates/contacto.html
+++ b/v2/patrodent/templates/contacto.html
@@ -8,7 +8,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Contacto" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'contacto' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'contacto' %}">
 <meta property="og:description" content="Como contactar con la Clínica Dental Patrocinio Gómez Martínez (Patrodent">
 {% endblock %}
 
