--- a/v2/patrodent/templates/estetica.html
+++ b/v2/patrodent/templates/estetica.html
@@ -5,7 +5,7 @@
 {% block metadescription %}La Odontología Estética se encarga de tratar todas aquellas alteraciones y patologías de la morfología bucodental para lograr un canon de belleza{% endblock %}
 {% block meta %}
 <meta property="og:title" content="Estética dental y blanqueamiento " />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'estetica' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'estetica' %}">
 <meta property="og:description" content="La Odontología Estética se encarga de tratar todas aquellas alteraciones y patologías de la morfología bucodental para lograr un canon de belleza">
 {% endblock %}
 {% block title %}Estética dental y blanqueamiento - {% endblock %}
