--- a/v2/patrodent/templates/financiacion.html
+++ b/v2/patrodent/templates/financiacion.html
@@ -4,7 +4,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Financiación a tu medida sin intereses" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'financiación' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'financiación' %}">
 <meta property="og:description" content="Financiación a tu medida sin intereses">
 {% endblock %}
 
