--- a/v2/patrodent/templates/implantes.html
+++ b/v2/patrodent/templates/implantes.html
@@ -8,7 +8,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Cirugía oral e implantes" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'implantes' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'implantes' %}">
 <meta property="og:description" content="Los implantes son la manera más natural de sustituir dientes perdidos.">
 {% endblock %}
 
