--- a/v2/patrodent/templates/odontologia.html
+++ b/v2/patrodent/templates/odontologia.html
@@ -6,7 +6,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Odontología General / Estética " />
-<meta property="og:url" content="{% url 'template_view' 'odontologia' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'odontologia' %}">
 <meta property="og:description" content="La odontología conservadora y restauradora nos permite prevenir, detener y curar las caries dentales">
 {% endblock %}
 
