--- a/v2/patrodent/templates/ortodoncia.html
+++ b/v2/patrodent/templates/ortodoncia.html
@@ -6,7 +6,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Ortodoncia" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'ortodoncia' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'ortodoncia' %}">
 <meta property="og:description" content="La ortodoncia es una especialidad de la odontología que se encarga de estudiar y corregir las malposiciones y maloclusiones dentarias">
 {% endblock %}
 
