--- a/v2/patrodent/templates/protesis.html
+++ b/v2/patrodent/templates/protesis.html
@@ -6,7 +6,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Prótesis dental e implantológica " />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{{ request.get_host }}{% url 'template_view' 'protesis' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'protesis' %}">
 <meta property="og:description" content="La reposición de los dientes perdidos se hace mediante prótesis.">
 {% endblock %}
 
