--- a/v2/patrodent/templates/software-ortodoncia.html
+++ b/v2/patrodent/templates/software-ortodoncia.html
@@ -6,7 +6,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Software digital de ortodoncia" />
-<meta property="og:url" content="{% url 'template_view' 'software-ortodoncia' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'software-ortodoncia' %}">
 <meta property="og:description" content="Software digital de ortodoncia.">
 {% endblock %}
 
