--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -128,7 +128,7 @@
                         <div class="contactheader">
                             <div class="tel"><a class="phone" href="tel:618245151"><i class="fas fa-phone-alt" style="font-size: 36px;" alt="phone"></i>618 24 51 51</a>
                                 <div class="whatssap noLinkWhatsapp"> <span>
-                                    <a href="https://wa.me/34618245151">
+                                    <a href="https://wa.me/34618245151?text=Hola%20quisiera%20hacerle%20una%20consulta%20">
                                         <i class="fab fa-whatsapp" style="font-size: 26px;" alt="whatssap"></i></a></span></div></div>
                             Horario: L - J 16:00 a 21:00 <br/> <span class="fridaytime">V 9:00 a 14:00</span>
                         </div>
@@ -221,7 +221,6 @@
                     <div class="footer-content">
                         <div class="wrapper indent-bot5">
                             <div class="alpha grid_12 prefix_1">
-                                <div class="footer-title">Galería de fotografías</div>
                                 <div class="wrapper">
                                    {% block footergallery %}
                                        {% include "templates/inc.footer_carousel.html" %}
@@ -229,7 +228,7 @@
                                 </div>
                             </div>
                             <div class="grid_7 omega contact_info">
-                                <div class="footer-title"><a href="{% url 'template_view' "contacto" %}">Donde estamos</a></div>
+                                <div class="footer-title"><a href="{% url 'template_view' "contacto" %}">Localización</a></div>
                                 <div id="footermap">
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2241.518966954089!2d-6.002534633885874!3d37.390150981440264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126c127b462e0f%3A0xcebc2c2e1156dfdd!2sCl%C3%ADnica%20Dental%20PATRODENT%20en%20Sevilla%20-%20Odontolog%C3%ADa%20Avanzada!5e0!3m2!1ses!2ses!4v1583685844082!5m2!1ses!2ses" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                                 </div>
