--- a/v2/patrodent/templates/antes-y-despues.html
+++ b/v2/patrodent/templates/antes-y-despues.html
@@ -8,7 +8,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Casos reales de nuestros pacientes" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{{ request.get_host }}{% url 'template_view' 'antes-y-despues' %}">
+<meta property="og:url" content="https://patrodent.com{{ request.get_host }}{% url 'template_view' 'antes-y-despues' %}">
 <meta property="og:description" content="Casos reales de nuestros pacientes (antes y después)">
 {% endblock %}
 
