--- a/v2/patrodent/templates/conocenos.html
+++ b/v2/patrodent/templates/conocenos.html
@@ -6,7 +6,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Conocenos" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'conocenos' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'conocenos' %}">
 <meta property="og:description" content="¿Quienes son las doctoras de la clínica? ¿Cómo se ha formado?">
 <meta property="og:type" content="image/jpeg" />
 <meta property="og:image" content="http{% if request.is_secure %}{% endif %}://{% static 'images/equipo.jpg' %}" />
