--- a/v2/patrodent/templates/endodoncia.html
+++ b/v2/patrodent/templates/endodoncia.html
@@ -3,7 +3,7 @@
 {% block metadescription %}Software de diseño de sonrisa digital.{% endblock %}
 {% block meta %}
 <meta property="og:title" content="Endodoncia" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'endoconcia' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'endoconcia' %}">
 <meta property="og:description" content="Software de diseño de sonrisa digital">
 {% endblock %}
 {% block title %}Endodoncia - {% endblock %}
