--- a/v2/patrodent/templates/instalaciones.html
+++ b/v2/patrodent/templates/instalaciones.html
@@ -7,10 +7,10 @@
 
 {% block meta %}
 <meta property="og:title" content="Nuestras Instalaciones" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'instalaciones' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'instalaciones' %}">
 <meta property="og:description" content="Instalaciones de la Clínica Dental Patrocinio Gómez Martínez (Patrodent)">
 <meta property="og:type" content="image/jpeg" />
-<meta property="og:image" content="http{% if request.is_secure %}{% endif %}://{% static 'images/consulta5.jpg' %}" />
+<meta property="og:image" content="https://patrodent.com{% static 'images/consulta5.jpg' %}" />
 {% endblock %}
 
 {% block class-clinica-link %}active{% endblock %}
