--- a/v2/patrodent/templates/odontopediatria.html
+++ b/v2/patrodent/templates/odontopediatria.html
@@ -4,7 +4,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Odontopediatría" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'odontopediatria' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'odontopediatria' %}">
 <meta property="og:description" content="Odontopediatría Pediátrica en tres grupos: Prevención, Odontopediatría y Ortodoncia infantil">
 {% endblock %}
 
