--- a/v2/patrodent/templates/quienes-somos.html
+++ b/v2/patrodent/templates/quienes-somos.html
@@ -6,10 +6,10 @@
 
 {% block meta %}
 <meta property="og:title" content="Nuestro Equipo" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{{ request.get_host }}{% url 'template_view' 'quienes-somos' %}">
+<meta property="og:url" content="https://patrodent.com{{ request.get_host }}{% url 'template_view' 'quienes-somos' %}">
 <meta property="og:description" content="¿Quienes forman Patrodent? ¿Cual es nuestro equipo?">
 <meta property="og:type" content="image/jpeg" />
-<meta property="og:image" content="http{% if request.is_secure %}{% endif %}://{{ request.get_host }}{% static 'images/equipo.jpg' %}" />
+<meta property="og:image" content="https://patrodent.com{{ request.get_host }}{% static 'images/equipo.jpg' %}" />
 {% endblock %}
 
 {% block class-patrodent-link %} active{% endblock %}
