--- a/v2/patrodent/templates/sedacion-consciente.html
+++ b/v2/patrodent/templates/sedacion-consciente.html
@@ -6,10 +6,10 @@
 
 {% block meta %}
 <meta property="og:title" content="Sedación Consciente" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'sedacion-consciente' %}">
+<meta property="og:url" content="https://patrodent.com{% url 'template_view' 'sedacion-consciente' %}">
 <meta property="og:description" content="La sedación consciente en odontología permite conseguir un estado de relajación y tranquilidad para el paciente.">
 <meta property="og:type" content="image/jpeg" />
-<meta property="og:image" content="http{% if request.is_secure %}{% endif %}://{% static 'images/sala_de_esperas.jpg' %}" />
+<meta property="og:image" content="https://patrodent.com{% static 'images/sala_de_esperas.jpg' %}" />
 {% endblock %}
 
 {% block title %}Fidelización - {% endblock %}
