--- a/v2/patrodent/templates/servicios.html
+++ b/v2/patrodent/templates/servicios.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block meta %}
 <meta property="og:title" content="Servicios" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{{ request.get_host }}{% url 'template_view' 'servicios' %}">
+<meta property="og:url" content="https://patrodent.com{{ request.get_host }}{% url 'template_view' 'servicios' %}">
 <meta property="og:description" content="Servicios que ofrece la Clínica Dental Patrocinio Gómez Martínez (Patrodent)">
 {% endblock %}
 {% block title %}Servicios - {% endblock %}
