--- a/v2/patrodent/templates/software-diseno.html
+++ b/v2/patrodent/templates/software-diseno.html
@@ -6,7 +6,7 @@
 
 {% block meta %}
 <meta property="og:title" content="Software de diseño de sonrisa digital" />
-<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{{ request.get_host }}{% url 'template_view' 'software-diseno' %}">
+<meta property="og:url" content="https://patrodent.com{{ request.get_host }}{% url 'template_view' 'software-diseno' %}">
 <meta property="og:description" content="Software de diseño de sonrisa digital">
 {% endblock %}
 
