--- a/v2/patrodent/templates/quienes-somos.html
+++ b/v2/patrodent/templates/quienes-somos.html
@@ -19,31 +19,36 @@
 {% block pageclass %}whoWeAre{% endblock %}
 
 {% block footergallery %}
-    <figure>
-        <a href="{% static 'images/patrocinio_despacho.jpg' %}" rel="shadowbox[quienesSomos]" title="Patrocinio en el despacho">
-            <img src="{% static 'images/patrocinio_despacho.min.jpg' %}" alt="Patrocinio en el despacho" title="Patrocinio en el despacho" />
-        </a>
-    </figure>
-    <figure>
-        <a href="{% static 'images/angela2.jpg' %}" rel="shadowbox[quienesSomos]" title="Angela Martín">
-            <img src="{% static 'images/angela2.min.jpg' %}" alt="Angela Martín" title="Angela Martín" />
-        </a>
-    </figure>
-    <figure>
-        <a href="{% static 'images/equipo-trabajando.jpg' %}" rel="shadowbox[quienesSomos]" title="Equipo trabajando">
-            <img src="{% static 'images/equipo-trabajando.min.jpg' %}" alt="Equipo trabajando" title="Equipo trabajando" />
-        </a>
-    </figure>
-    <figure>
-        <a href="{% static 'images/patrocinio_trabajando.jpg' %}" rel="shadowbox[quienesSomos]" title="Patrocinio trabajando">
-            <img src="{% static 'images/patrocinio_trabajando.min.jpg' %}" alt="Patrocinio trabajando" title="Patrocinio trabajando" />
-        </a>
-    </figure>
-    <figure>
-        <a href="https://www.youtube.com/watch?v=gt4ECC3SROg" target="_blank" title="Títulos de Patrocinio Gómez">
-            <img src="{% static 'images/titulos.min.jpg' %}" alt="Títulos de Patrocinio Gómez" title="Títulos de Patrocinio Gómez" />
-        </a>
-    </figure>
+<div class="jcarousel-wrapper">
+    <div class="jcarousel" data-jcarousel="true">
+        <ul class="gallery" itemscope="" itemtype="http://schema.org/ImageGallery" style="left: 0px; top: 0px;" data-pswp-uid="1">
+                <li class="photo-item">
+                    <figure itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
+                        <a class="image" href="{% static 'images/patrocinio_despacho.jpg' %}" itemprop="contentUrl">
+                            <img src="{% static 'images/patrocinio_despacho.jpg' %}" alt="Patrocinio en el despacho" title="Patrocinio en el despacho" onerror="$(this).parents('.photo-item').remove()">
+                        </a>
+                    </figure>
+                </li>
+                <li class="photo-item">
+                    <figure itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
+                        <a class="image" href="{% static 'images/equipo-trabajando.jpg' %}" itemprop="contentUrl">
+                            <img src="{% static 'images/equipo-trabajando.jpg' %}" alt="Equipo trabajando" title="Equipo trabajando" onerror="$(this).parents('.photo-item').remove()">
+                        </a>
+                    </figure>
+
+                </li>
+                <li class="photo-item">
+                    <figure itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
+                        <a class="image" href="{% static 'images/titulos.jpg' %}" itemprop="contentUrl">
+                            <img src="{% static 'images/titulos.jpg' %}" alt="Títulos de Patrocinio Gómez" title="Títulos de Patrocinio Gómez"  onerror="$(this).parents('.photo-item').remove()">
+                        </a>
+                    </figure>
+                </li>
+        </ul>
+        <span class="jcarousel-control-prev" data-jcarouselcontrol="true"><i class="fas fa-chevron-right"></i></span>
+        <span class="jcarousel-control-next" data-jcarouselcontrol="true"><i class="fas fa-chevron-right"></i></span>
+    </div>
+</div>
 {% endblock %}
 
 
