--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -11,8 +11,8 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="{% static 'js/tms-0.3.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/tms_presets.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/tms-0.3.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/tms_presets.min.js' %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block pageclass %}index{% endblock %}
