--- a/v2/patrodent/templates/nuestra-historia.html
+++ b/v2/patrodent/templates/nuestra-historia.html
@@ -55,8 +55,8 @@
                     </figure>
                 </li>
         </ul>
-        <span class="jcarousel-control-prev" data-jcarouselcontrol="true">‹</span>
-        <span class="jcarousel-control-next" data-jcarouselcontrol="true">›</span>
+        <span class="jcarousel-control-prev" data-jcarouselcontrol="true"><i class="fas fa-chevron-right"></i></span>
+        <span class="jcarousel-control-next" data-jcarouselcontrol="true"><i class="fas fa-chevron-right"></i></span>
     </div>
 </div>
 {% endblock %}
