changes for js and changed italic font

--- a/v2/patrodent/templates/quienes-somos.html
+++ b/v2/patrodent/templates/quienes-somos.html
@@ -45,7 +45,7 @@
                     </figure>
                 </li>
         </ul>
-        <span class="jcarousel-control-prev" data-jcarouselcontrol="true"><i class="fas fa-chevron-right"></i></span>
+        <span class="jcarousel-control-prev" data-jcarouselcontrol="true"><i class="fas fa-chevron-left"></i></span>
         <span class="jcarousel-control-next" data-jcarouselcontrol="true"><i class="fas fa-chevron-right"></i></span>
     </div>
 </div>
